<resources>
    <string name="app_name">Chantuy</string>
    <string name="hottest">Hottest</string>
    <string name="newest">Newest</string>
    <string name="topic">Topic</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="profile_page_title">Profile Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_placeholder">16 Apr 2021 @ 10.29</string>
    <string name="image_content_placeholder">Image Placeholder</string>
    <string name="curhat_content_placeholder">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs</string>
    <string name="curhat_card_like_desc">Like Curhat</string>
    <string name="curhat_card_dislike_desc">Dislike curhat</string>
    <string name="view_more">View More</string>
    <string name="curhat_comment_count_viewholder">4</string>
    <string name="hottest_curhat_text">Hottest Curhats</string>
    <string name="new_curhat">New Curhat</string>
    <string name="insert_curhat_content">What is in your mind?</string>
    <string name="insert_curhat_content_hint">Content</string>
    <string name="choose_topic">Choose Topic</string>
    <string name="add_curhat">Add Curhat</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_invalid_username">Email not found/Invalid Email</string>
    <string name="login_invalid_password">Wrong Passwords</string>
    <string name="register_invalid_email_taken">Email has been taken!</string>
    <string name="register_invalid_email_format">Invalid Email Format!</string>
    <string name="register_invalid_username">Invalid UserName</string>
    <string name="register_invalid_confirm_password">Confirm Password must match password</string>
    <string name="register_invalid_password">Invalid Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="add_comment">Add a comment...</string>
    <string name="add">Add</string>
    <string name="filte_by_topic">Filter</string>
    <string name="find_more_topic">Find more topics</string>
    <string name="is_anonymous">Anonymous</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_curhat">Update Curhat</string>
    <string name="curhat_id_label">Curhat ID</string>
    <string name="recent_curhat_text">Recent Curhat(s)</string>
    <string name="recent_reply_text">Recent Reply(s)</string>
    <string name="search_topic">Search Topic</string>
    <string name="search_hint">Search Curhat</string>
    <string name="cancel">Cancel</string>
    <string name="great">Great</string>
    <string name="cool">Cool</string>
    <string name="love_it">Love It</string>
    <string name="bad">Bad</string>
    <string name="mad">Mad</string>
    <string name="show_more">Show More</string>
    <string name="enable_notif">Enable Notification</string>
    <string name="change_font_size">Change font size</string>
    <string name="submit_button_text">Submit</string>
    <string name="submit_data_text">Submit Data</string>
    <string name="delete_account">Delete Account</string>
    <string name="send_feedback_btn" >Send Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="how_could_we_improve">How could we improve?</string>
    <string name="mark_feedback_solved">Mark as Solved</string>
    <string name="pending">Pending</string>
    <string name="view_feedback">View Feedbacks</string>
    <string name="solved">Solved</string>
    <string name="example">"Example: "</string>
    <string name="filter_like">Sort by most like</string>
    <string name="filter_dislike">Sort by most dislike</string>
    <string name="filter_day">Filter curhats posted last 24 hours</string>
    <string name="filter_week">Filter curhats posted last 1 week</string>
    <string name="filter_month">Filter curhats posted last 1 month</string>
    <string name="filter_year">Filter curhats posted last 1 year</string>
    <string name="confirm_delete_account">Are you sure you want to delete this account? All curhats and comments you\'ve posted will also be deleted </string>
    <string name="delete_account_success">Account has been successfully deleted</string>
    <string name="countNumber">0</string>
    <string name="dob_hint">Date Of Birth</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="login_emptyE">Email cannot be empty</string>
    <string name="login_emptyP">Password cannot be empty</string>
    <string name="login_wrongE">User not found</string>
    <string name="login_wrongP">Wrong password</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="user_name_hint">UserName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="nf_show_more">Show More</string>>
    <string name="sorted_by">Sorted by: </string>
    <string name="most_liked">Most Liked</string>
    <string name="most_disliked">Most Disliked</string>
    <string name="posted_24_hours">Posted Last 24 Hours</string>
    <string name="posted_one_week">Posted Last One Week</string>
    <string name="posted_one_month">Posted Last One Month</string>
    <string name="posted_one_year">Posted Last One Year </string>
    <string name="view">View</string>
    <string name="posted_at">"Posted at"</string>
    <string name="logout">Log out</string>
    <string name="replied_at">Replied at</string>
    <string name="view_replied_curhat">View Replied Curhat</string>
    <string name="no_post">Nothing posted</string>
    <string name="joined_at">Joined at</string>
    <string name="click_photo_to_update">Click photo to update</string>
    <string name="already_have_account">Already have an account? login</string>
    <string name="update_password_hint">Update Password</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="update_user_profile" >Update User Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="commented_on_your_curhat">commented:</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_submit_data">Submit Data</string>
    <string name="title_activity_insert_feedback">Insert Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_update_curhat">Update Curhat</string>
    <string name="title_activity_insert_curhat">Insert Curhat</string>
    <string name="title_activity_curhat_detail">Curhat Detail</string>
    <string name="title_activity_notif">Notifications</string>
    <string name="title_activity_update_profile">Update Profile</string>
    <string name="title_activity_update_password">Update Password</string>
    <string name="toast_update_succesfully">Curhat Updated Succesfully</string>
    <string name="content_empty_error">Content must not be empty</string>

    <string name="toast_curhat_dl">Curhat succesfully disliked!</string>
    <string name="toast_curhat_l">Curhat succesfully liked!</string>

    <string name="toast_img_up">Image Uploaded!</string>
    <string name="feedback_mnbe">Feedback must not be empty</string>


    <string name="toast_fsd">Feedback succesfully deleted!</string>
    <string name="toast_comment_s">Comment succesfully added!</string>
    <string name="toast_feedback_s">Feedback added succesfully!</string>
    <string name="toast_cds">Comment deleted succesfully</string>
    <string name="toast_pus">Profile Updated succesfully!</string>

    <string name="err_ucbe">Username cannot be empty</string>
    <string name="toast_psu">Password succesfully updated</string>


    <string name="validate_ue">UserName cannot be empty</string>
    <string name="validate_ee">Email cannot be empty</string>
    <string name="validate_ef">Invalid email format</string>
    <string name="validate_pl">Password must contain at least 6 characters</string>
    <string name="validate_pcp">Confirm password doesn\'t match password</string>
    <string name="validate_une">This email is already taken</string>
    <string name="validate_uu">User not found!</string>
    <string name="success_dela">Account has been succesfully deleted</string>
    <string name="fail_dela">Delete account failed, try again!</string>
    <string name="here">here</string>
    <string name="dont_have_acc">Don\'t have an account? Register</string>

    <string name="toast_gsgf">Sign in failed, try signing in again!</string>
    <string name="set_password">Set Password</string>
    <string name="curhats_posted">curhat(s) posted</string>
    <string name="replies_posted">reply(s) posted</string>
    <string name="change_password_value">Change Password</string>
    <string name="gender_lbl">Gender: </string>
    <string name="age_lbl">Age: </string>
    <string name="gender">gender</string>
    <string name="age">age</string>

    <string name="edited">(edited)</string>
    <string name="date">date</string>
    <string name="err_relog">An error has occured, try again!</string>
    <string name="login_google">Log in with Google</string>
    <string name="register_google">Register with Google</string>
    <string name="wrong_old">Wrong old password</string>
    <string name="marked_solved">Marked as Solved</string>
    <string name="marked_solveq">Marked this feedback as Solved ?</string>
    <string name="sureq">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_curhat_success">Succesfully added new curhat!</string>
    <string name="curhat_topic_validation">Topic must not be empty</string>
    <string name="curhat_content_validation">Curhat content must not be empty</string>
    <string name="aditional_info">Additional Info</string>
    <string name="add_comment_val">Comment must not be empty</string>
    <string name="no_feedback">There is no feedback</string>
    <string name="year"> year(s))</string>
    <string name="at">at</string>
    <string name="comment">comment(s)</string>
    <string name="ausure">Are you sure ?</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="default_topic">leave the field blank to use current topic</string>
    <string name="current">current</string>
    <string name="no_notification">No notification</string>
    <string name="sd_validate">Date of birth should be filled</string>
    <string name="input_password">Input Password</string>
    <string name="regist_error">An error has occurred, please try again</string>


</resources>
