<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_curhat_menu_item"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add_curhat"
        app:showAsAction="always" />
    <item
        android:id="@+id/notification_menu_item"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications"
        app:showAsAction="never"
        app:iconTint="@color/black"/>
    <item
        android:id="@+id/settings_menu_item"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never"
        app:iconTint="@color/black"/>
</menu>