<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue_very_light"
    android:backgroundTint="@color/primary_blue_very_light"
    tools:context=".views.update_curhat.UpdateCurhatActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/primary_blue"
        android:backgroundTint="@color/primary_blue"
        app:cardCornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/primary_blue">

            <TextView
                android:id="@+id/update_current_curhat_topic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/action_sign_in"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/primary_blue_very_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_topic_auto_complete" />

            <TextView
                android:id="@+id/curhat_id_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/curhat_id_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recent_reply_tv" />

            <EditText
                android:id="@+id/update_curhat_id_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background_disabled"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/curhat_id_labels" />

            <EditText
                android:id="@+id/insert_feedback_content_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/insert_curhat_content_hint"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                android:textColorHint="@color/transparent_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_curhat_content_label" />

            <TextView
                android:id="@+id/new_curhat_content_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/insert_curhat_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_curhat_id_edit" />

            <TextView
                android:id="@+id/recent_reply_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/update_curhat"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/new_curhat_topic_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/choose_topic"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insert_feedback_content_edit_text" />

            <AutoCompleteTextView
                android:id="@+id/update_topic_auto_complete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/choose_topic"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                android:textColorHint="@color/transparent_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_curhat_topic_label"
                tools:visibility="visible" />

            <CheckBox
                android:id="@+id/update_set_anonymous_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/is_anonymous"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorLink="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_current_curhat_topic" />

            <Button
                android:id="@+id/insert_feedback_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/primary_blue_dark"
                android:text="@string/update"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_set_anonymous_checkbox" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>